logs/Slang/generated/hdlconv/hdlconvertor_p253.sv.log
name: hdlconvertor_p253
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p253.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p253.sv:4:1: error: expected member
alias bus16[11:0] = low12;
^~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p253.sv:5:1: error: expected member
alias bus16[15:4] = high12;
^~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p253.sv:8:1: error: expected member
alias bus16 = {high12, low12[3:0]};
^~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p253.sv:9:1: error: expected member
alias high12[7:0] = low12[11:4];
^~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p253.sv:15:1: error: expected member
alias rst = Reset = reset = RST;
^~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p253.sv:16:1: error: expected member
alias clk = Clk = clock = CLK;
^~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p253.sv:17:1: error: expected member
alias d = Data = data = D;
^~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p253.sv:18:1: error: expected member
alias q = Q;
^~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p253.sv:19:1: error: expected member
alias Q_ = q_bar = Q_Bar = qbar;
^~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p253.sv:20:1: error: unknown module 'lib1_dff'
`LIB_DFF my_dff (.*); // LIB_DFF is any of lib1_dff, lib2_dff or lib3_dff
^~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p253.sv:1:17: note: expanded from macro 'LIB_DFF'
`define LIB_DFF lib1_dff
                ^~~~~~~~
